# kslice

./: .clang-format  .gitignore  CMakeLists.txt  Slice.cpp  Slice.h  license.txt  main.cpp  readme.md
.circleci/: Dockerfile  config.yml
cmake/: FindFfmpeg.cmake  FindIconv-copyright.txt  FindIconv.cmake
lib/: Args.cpp  CMakeLists.txt  Extract.cpp  Extract.h  FFProbeStrategy.cpp  FFProbeStrategy.h  Help.h  RunProgram.cpp  Slice.cpp  Write.cpp  Write.h  kslice.cpp
lib/include/kscore/: Args.h  IFrameStrategy.h  RunProgram.h  Slice.h  kslice.h
lib/test/: File.h  Path.h  TestArgs.cpp  TestHelp.cpp  TestKSlice.cpp  main.cpp
other/subl/: kslice.sublime-project
testfiles/: 1.expected3x2.csv  out.csv  temp.json
