cmake_minimum_required(VERSION 3.0)
project(kslice)

set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib")
add_executable(kslice main.cpp)
target_link_libraries(kslice ${OpenCV_LIBS})
target_link_libraries(kslice kscore)
