cmake_minimum_required(VERSION 3.0)
project(kscore)

set(CMAKE_CXX_STANDARD 11)
set(PUBLIC_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(PRIVATE_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR})
set(TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/test)
message("PUBLIC_INCLUDE = ${PUBLIC_INCLUDE}")
message("PRIVATE_INCLUDE = ${PRIVATE_INCLUDE}")
enable_testing()

find_package( OpenCV REQUIRED )

set(Boost_USE_STATIC_LIBS   ON)
find_package( Boost COMPONENTS system filesystem program_options REQUIRED )

if (NOT Boost_FOUND)
    message(FATAL_ERROR "Boost not found")
endif()

# apparent macOS bug with find_package(boost)
# https://stackoverflow.com/questions/45648260/find-packageboost-returns-empty-boost-libraries
if (NOT Boost_LIBRARIES)
    list(APPEND Boost_LIBRARIES "/usr/local/lib/libboost_system.a" "/usr/local/lib/libboost_filesystem.a" "libboost_program_options.a")
endif()

if (NOT Boost_LIBRARIES)
    message(FATAL_ERROR "Boost_LIBRARIES not found")
endif()

#include_directories(PUBLIC ${PUBLIC_INCLUDE})
#include_directories(PRIVATE ${PRIVATE_INCLUDE})
include_directories(PRIVATE ${OpenCV_INCLUDE_DIRS})
link_directories(PRIVATE ${Boost_LIBRARY_DIRS})

include_directories(kslice ${Boost_INCLUDE_DIRS})
message("OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/extern/ezxml")

add_library(kscore kslice.cpp Slice.cpp Args.cpp)
target_include_directories(kscore PUBLIC include)
target_include_directories(kscore PRIVATE .)
target_link_libraries(kscore ${OpenCV_LIBS})
target_link_libraries(kscore ${Boost_LIBS})

message("Boost_LIBRARIES = ${Boost_LIBRARIES}")
message("Boost_VERSION = ${Boost_VERSION}")

target_link_libraries( kscore ${Boost_LIBRARIES} )
target_link_libraries( kscore ezxml )

enable_testing()
add_executable(kstest ${TEST_DIR}/main.cpp
        ${TEST_DIR}/TestHelp.cpp
        ${TEST_DIR}/TestKSlice.cpp)
target_include_directories(kstest PRIVATE ${TEST_DIR})
target_include_directories(kstest PRIVATE include)
target_include_directories(kstest PRIVATE .)
target_link_libraries(kstest ${OpenCV_LIBS})
target_link_libraries(kstest kscore)
add_test(NAME kstest COMMAND kstest WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/test)

#set(KSCORE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../testfiles)
get_filename_component(KSCORE_TEST_DATA_DIR "../testfiles"
        REALPATH BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

file(WRITE ${CMAKE_CURRENT_SOURCE_DIR}/test/Path.h
        "// This file is auto generated by CMake
#pragma once

// The absolute path to the root of the repository.
#ifndef KSCORE_TEST_DATA_DIR
#define KSCORE_TEST_DATA_DIR \"${KSCORE_TEST_DATA_DIR}\"
#endif

// The absolute path to the binary output directory.
#ifndef KSCORE_BINARY_OUTPUT_PATH
#define KSCORE_BINARY_OUTPUT_PATH \"${CMAKE_BINARY_DIR}\"
#endif")